--- a/ciscryp/package.json
+++ b/ciscryp/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
+    "swiper": "^8.4.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
